[package]
name = "lolchive"
version = "0.1.0"
edition = "2021"
description = "local liminal archiver for webpages"
license = "MIT"
readme = "README.md"
documentation = "https://github.com/sigh-gone/lolchive/"
homepage = "https://crates.io"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
image = "0.24.6"
reqwest = "0.11.7"
bytes = "1"
fantoccini = "0.19.3"
tokio-test = "0.4.2"
serde_json = "1.0"
dirs = "5.0.1"
regex = "1"
substring = "1.4.5"
scraper = "0.16.0"
lazy_static = "1.4.0"
chrono = "0.4.24"